@@ -1,3 +1,8 @@
+2006-05-19  Xavier Claessens  <xclaesse@gmail.com>
+
+	* libempathy/empathy-idle.c: Auto away when session id idle, instead of
+	when screensaver is active.
+
 2006-05-18  Xavier Claessens  <xclaesse@gmail.com>
 
 	* libempathy-gtk/gossip-private-chat.h:
